--- a/index.html
+++ b/index.html
@@ -182,31 +182,19 @@
   </div>
 </template>
 
-<script>
-  var fireballSize = 22,
-      wizardSpeed = 3,
-      wizardWidth = 70;
-
-  function getFireballSpeed(left) {
-    return left ? 5 : 2;
-  }
-
-  function getWizardHeight() {
-    return 1.337 * wizardWidth;
-  }
-
-  function getWizardX(width) {
-    return 0.5 * width;
-  }
-
-  function getWizardY(height) {
-    return 1/3 * height;
-  }
-</script>
+<script src="js/game-parameters.js"></script>
 <script src="js/stat.js"></script>
-<script src="js/setup.js"></script>
 <script src="js/game.js"></script>
-<script src="js/dialog.js"></script>
+
+<script src="js/config.js"></script>
+<script src="js/utils.js"></script>
+
+<script src="js/wizards/wizards-common.js"></script>
+<script src="js/wizards/wizard-mine.js"></script>
+<script src="js/wizards/wizards-mock.js"></script>
+
+<script src="js/popup/dialog.js"></script>
+<script src="js/popup/setup-popup.js"></script>
 
 </body>
 </html>
