Upload and load from server

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
   </div>
 </header>
 
+<div class="error-screen"></div>
+
 <div class="overlay setup hidden">
   <form class="setup-wizard-form"
         method="post"
@@ -185,12 +187,14 @@
 <script src="js/game-parameters.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
+<script src="js/backend.js"></script>
 
 <script src="js/config.js"></script>
 <script src="js/utils.js"></script>
 
 <script src="js/wizards/wizards-common.js"></script>
 <script src="js/wizards/wizard-mine.js"></script>
+<script src="js/wizards/wizards-load.js"></script>
 <script src="js/wizards/wizards-mock.js"></script>
 
 <script src="js/popup/dialog.js"></script>
