Wizard sorting + debouncer

--- a/index.html
+++ b/index.html
@@ -192,9 +192,10 @@
 <script src="js/config.js"></script>
 <script src="js/utils.js"></script>
 
+<script src="js/wizards/debounce.js"></script>
 <script src="js/wizards/wizards-common.js"></script>
-<script src="js/wizards/wizard-mine.js"></script>
 <script src="js/wizards/wizards-load.js"></script>
+<script src="js/wizards/wizard-mine.js"></script>
 <script src="js/wizards/wizards-mock.js"></script>
 
 <script src="js/popup/dialog.js"></script>
